--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,10 +78,14 @@ add_definitions(-DHAVE_PTHREAD -DHAVE_STRUCT_TIMEVAL -DENABLE_TRACE)
 
 include_directories(3rd/libexosip2-5.3.0/include)
 include_directories(3rd/libosip2-5.3.1/include)
+include_directories(3rd/ZLMediaKit/src)
+include_directories(3rd/ZLMediaKit/3rdpart/ZLToolKit/src)
 file(GLOB_RECURSE SipStackSrc 3rd/libexosip2-5.3.0/*.c 3rd/libosip2-5.3.1/*.c)
 add_library(sip STATIC ${SipStackSrc})
+
+add_subdirectory(3rd/ZLMediaKit)
 
 file(GLOB_RECURSE SRC src/*.c src/*.cpp)
 add_executable(rtsp2sip ${SRC})
 
-target_link_libraries(rtsp2sip sip pthread)
+target_link_libraries(rtsp2sip sip pthread zlmediakit zltoolkit jsoncpp)
